fix for tv seasons on mobile screen v5

--- a/src/components/seasons-card/seasons-card.styles.scss
+++ b/src/components/seasons-card/seasons-card.styles.scss
@@ -1,8 +1,8 @@
 @import '../../assets/sass-variables';
 
 .season-details {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   border-bottom: 1px solid #867f7f;
   width: 100%;
   // height: 100%;
@@ -13,7 +13,7 @@
 
   .season-card {
     display: grid;
-    grid-template-columns: 0.11fr 1fr;
+    grid-template-columns: 0.11fr auto;
     grid-gap: 1rem;
     width: 100%;
     // height: 100%;
